# pilotage-airflow

./: .dockerignore  .editorconfig  .env-base  .envrc  .gitignore  .s3cfg  .sqlfluffignore  CHANGELOG.md  Dockerfile  Dockerfile.streamlit  Makefile  README.md  custom-dev-entrypoint.sh  custom-prod-entrypoint.sh  dag-variables.json  dbt_project.yml  docker-compose.yml  env.example  generate-requirements.sh  monrecap_mailing_list.py  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-prefect.txt  requirements.in  requirements.txt  setup.cfg  variables.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  dbt-metabase.yml  git.yml  require-labels.yml  require-notion-link.yml
airflow/: dbt_project.yml  entrypoint.sh
airflow/dags/: main.py
airflow_src/: .gitignore  _source-vars.sh  dbt_project.yml  entrypoint.sh  profiles.yml  start-scheduler.sh  start-webserver.sh
airflow_src/dags/: final_tables.py  generate_docs.py  main.py  nps.py
airflow_src/tests/: test_dags.py
dags/: airflow_heartbeat.py  asp_processed_data.py  data_consistency.py  data_inclusion.py  dbt_convergence.py  dbt_daily.py  dbt_dsn.py  dbt_fagerh.py  dbt_france_travail.py  dbt_manual.py  dbt_offre_insertion.py  dbt_oneshot.py  dbt_snapshot.py  dbt_weekly.py  dgefp_etp.py  dgefp_get_etp.py  dsn_data_ingest.py  emplois_users_to_dora.py  esat.py  fagerh_ingestion_questionnaire.py  feed_common_db.py  final_tables.py  ft_diag_data.py  ft_donnees_brutes.py  ft_expe_nord.py  ft_information_territoire.py  ft_iop_data.py  generate_docs.py  immersion_facilitee.py  immersions_facilitee.py  mon_recap.py  monrecap.py  monrecap_airtable.py  monrecap_barometre.py  monrecap_mailing_list.py  nps.py  nps_gip.py  nps_pilotage.py  populate_autometa_docs.py  populate_db_test_FT.py  (+11 more)
dags/common/: __init__.py  airtable.py  anonymize__sensible_data.py  anonymize_sensible_data.py  bucket.py  dataframes.py  dates.py  db.py  db_monrecap.py  dbt.py  departments.py  errors.py  flux_iae.py  ftp.py  (+10 more)
dbt/: .gitignore
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: mkchangelog
streamlit_apps/lemarche_mie/: .env.example  Dockerfile  app.py  pyproject.toml
streamlit_apps/lemarche_mie/src/lemarche_mie/: calculs.py  db.py  load.py
streamlit_apps/lemarche_mie/tests/integration/: test_calculs_pipeline.py
streamlit_apps/lemarche_mie/tests/unit/: test_calculs.py
tests/: conftest.py  test_common_anonymize_perso_data.py  test_common_anonymize_sensible_data.py  test_common_dates.py  test_common_db.py  test_dags.py  test_populate_matometa_database.py
(+710 files in other folders)
